# vsgi

./: .editorconfig  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
src/: meson.build  vsgi-application.vala  vsgi-basic-authentication.vala  vsgi-config.vala.in  vsgi-cookie-utils.vala  vsgi-handler-module.vala  vsgi-multipart-output-stream.vala  vsgi-request.vala  vsgi-response.vala  vsgi-server-module.vala  vsgi-server.vala  vsgi-socket-server.vala  vsgi.vala
src/servers/: meson.build  vsgi-cgi.vala  vsgi-http.vala  vsgi-mock.vala
tests/: cgi-test.vala  cookies-test.vala  gi-test.py  http-server-test.vala  meson.build  request-test.vala  response-test.vala  socket-server-test.vala
